# MiniCAD

./: .gitignore  CMakeLists.txt  readme.md
src-cpp/: CMakeLists.txt  main.cpp
src-cpp/M_Core/: CMakeLists.txt  Mesh.cpp
src-cpp/M_Entity/: Box.h  CMakeLists.txt
src-cpp/core/: CMakeLists.txt  Mesh.h
src-cpp/entity/: Box.cpp  Box.h  CMakeLists.txt
